// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@theme/r-material: post/component: PostNavBreadcrumbs # should mount correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  className="makeStyles-root-1"
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    className="makeStyles-breadcrumbs-2"
    item={true}
    lg={12}
    md={12}
    sm={12}
    xl={12}
    xs={12}
  >
    <WithStyles(ForwardRef(Paper))
      elevation={0}
    >
      <WithStyles(ForwardRef(Breadcrumbs))
        area-label="Breadcrumb"
        component="nav"
      >
        <WithStyles(ForwardRef(Link))
          color="inherit"
          component={[Function]}
          key="/categories"
          to="/categories"
        >
          Categories
        </WithStyles(ForwardRef(Link))>
        <WithStyles(ForwardRef(Link))
          color="textPrimary"
          component={[Function]}
          key="/categories/some-category"
          to="/categories/some-category"
        >
          Some-category
        </WithStyles(ForwardRef(Link))>
      </WithStyles(ForwardRef(Breadcrumbs))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`@theme/r-material: post/component: PostNavBreadcrumbs # should mount with long path and render last one as activated 1`] = `
<WithStyles(ForwardRef(Grid))
  className="makeStyles-root-1"
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    className="makeStyles-breadcrumbs-2"
    item={true}
    lg={12}
    md={12}
    sm={12}
    xl={12}
    xs={12}
  >
    <WithStyles(ForwardRef(Paper))
      elevation={0}
    >
      <WithStyles(ForwardRef(Breadcrumbs))
        area-label="Breadcrumb"
        component="nav"
      >
        <WithStyles(ForwardRef(Link))
          color="inherit"
          component={[Function]}
          key="/posts"
          to="/posts"
        >
          Posts
        </WithStyles(ForwardRef(Link))>
        <WithStyles(ForwardRef(Link))
          color="inherit"
          component={[Function]}
          key="/posts/2019"
          to="/posts/2019"
        >
          2019
        </WithStyles(ForwardRef(Link))>
        <WithStyles(ForwardRef(Link))
          color="inherit"
          component={[Function]}
          key="/posts/2019/06"
          to="/posts/2019/06"
        >
          06
        </WithStyles(ForwardRef(Link))>
        <WithStyles(ForwardRef(Link))
          color="textPrimary"
          component={[Function]}
          key="/posts/2019/06/05"
          to="/posts/2019/06/05"
        >
          05
        </WithStyles(ForwardRef(Link))>
      </WithStyles(ForwardRef(Breadcrumbs))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
